Update the API version and finish the integration with the web server
